--- a/src/Board.fxml
+++ b/src/Board.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI">
    <children>
-      <MenuBar layoutX="75.0" layoutY="14.0" style="-fx-background-color: ;" AnchorPane.bottomAnchor="375.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <MenuBar layoutX="75.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" AnchorPane.bottomAnchor="468" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
