--- a/src/MainMenu.fxml
+++ b/src/MainMenu.fxml
@@ -7,16 +7,16 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI">
    <children>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f53b57;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f53b57" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="0.0">
          <children>
-            <TextField layoutX="76.0" layoutY="200.0" />
+            <TextField layoutX="75.0" layoutY="200.0" />
             <Text layoutX="102.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player One!">
                <font>
                   <Font name="Arial" size="18.0" />
                </font>
             </Text>
          </children></AnchorPane>
-      <AnchorPane layoutX="300.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #575fcf;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="300.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #575fcf" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <TextField layoutX="76.0" layoutY="200.0" />
             <Text layoutX="103.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player Two!">
