--- a/src/Board2.fxml
+++ b/src/Board2.fxml
@@ -11,12 +11,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="855.0" prefWidth="700.0" style="-fx-background-color: #006266;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="910.0" prefWidth="700.0" style="-fx-background-color: #e498ea;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text layoutX="262.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scrabble!">
+      <Text layoutX="278.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scrabble!">
          <font>
-            <Font name="Book Antiqua" size="44.0" />
+            <Font name="Centaur" size="44.0" />
          </font>
       </Text>
       <StackPane layoutX="100.0" layoutY="150.0" prefHeight="500.0" prefWidth="500.0">
@@ -299,5 +298,48 @@
             </GridPane>
          </children>
       </StackPane>
+      <Text layoutX="147.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Commands: Help, Exchange, Pass, Quit, Challenge, Jazz" wrappingWidth="406.9739074707031">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Text>
+      <GridPane gridLinesVisible="true" layoutX="81.0" layoutY="698.0" prefHeight="54.0" prefWidth="538.0" style="-fx-background-color: #14ff76; -fx-border-color: #0f6633;">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+      </GridPane>
+      <GridPane gridLinesVisible="true" layoutX="81.0" layoutY="802.0" prefHeight="54.0" prefWidth="538.0" style="-fx-background-color: #14ff76; -fx-border-color: #0f6633;">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <Text layoutX="311.0" layoutY="679.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player 1" wrappingWidth="78.97386169433594">
+         <font>
+            <Font name="Bodoni MT" size="20.0" />
+         </font>
+      </Text>
+      <Text layoutX="311.0" layoutY="783.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player 2" wrappingWidth="78.97386169433594">
+         <font>
+            <Font name="Bodoni MT" size="20.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
