--- a/src/Board2.fxml
+++ b/src/Board2.fxml
@@ -303,7 +303,7 @@
             <Font size="15.0" />
          </font>
       </Text>
-      <GridPane gridLinesVisible="true" layoutX="81.0" layoutY="698.0" prefHeight="54.0" prefWidth="538.0" style="-fx-background-color: #14ff76; -fx-border-color: #0f6633;">
+      <GridPane gridLinesVisible="true" layoutX="116.0" layoutY="698.0" prefHeight="54.0" prefWidth="468.0" style="-fx-background-color: #14ff76; -fx-border-color: #0f6633;">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -316,8 +316,27 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
+         <children>
+            <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+            <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
+            <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
+            <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
+            <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
+            <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
+         </children>
       </GridPane>
-      <GridPane gridLinesVisible="true" layoutX="81.0" layoutY="802.0" prefHeight="54.0" prefWidth="538.0" style="-fx-background-color: #14ff76; -fx-border-color: #0f6633;">
+      <Text layoutX="311.0" layoutY="679.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player 1" wrappingWidth="78.97386169433594">
+         <font>
+            <Font name="Bodoni MT" size="20.0" />
+         </font>
+      </Text>
+      <Text layoutX="311.0" layoutY="783.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player 2" wrappingWidth="78.97386169433594">
+         <font>
+            <Font name="Bodoni MT" size="20.0" />
+         </font>
+      </Text>
+      <GridPane gridLinesVisible="true" layoutX="116.0" layoutY="802.0" prefHeight="54.0" prefWidth="468.0" style="-fx-background-color: #14ff76; -fx-border-color: #0f6633;">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -330,16 +349,15 @@
          <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
+         <children>
+            <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" />
+            <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
+            <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
+            <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
+            <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" />
+            <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
+         </children>
       </GridPane>
-      <Text layoutX="311.0" layoutY="679.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player 1" wrappingWidth="78.97386169433594">
-         <font>
-            <Font name="Bodoni MT" size="20.0" />
-         </font>
-      </Text>
-      <Text layoutX="311.0" layoutY="783.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player 2" wrappingWidth="78.97386169433594">
-         <font>
-            <Font name="Bodoni MT" size="20.0" />
-         </font>
-      </Text>
    </children>
 </AnchorPane>
