--- a/src/Board2.fxml
+++ b/src/Board2.fxml
@@ -25,7 +25,7 @@
                   <Image url="@assets/board.png" />
                </image>
             </ImageView>
-            <GridPane hgap="2.0" prefHeight="0.0" prefWidth="0.0" vgap="2.0" StackPane.alignment="CENTER">
+            <GridPane hgap="2.0" prefHeight="0.0" prefWidth="0.0" vgap="2.0" StackPane.alignment="CENTER" fx:id="boardGrid">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
