--- a/src/Board2.fxml
+++ b/src/Board2.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -12,8 +13,10 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="691.0" prefWidth="769.0" style="-fx-background-color: #e498ea;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="691.0" prefWidth="769.0" style="-fx-background-color: #e498ea;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Board2Controller">
    <children>
       <Text layoutX="278.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scrabble!">
          <font>
@@ -331,7 +334,16 @@
             <ImageView fitHeight="55.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" />
          </children>
       </GridPane>
-      <TextField layoutX="535.0" layoutY="615.0" prefHeight="34.0" prefWidth="206.0" promptText="Input Command/Word" style="-fx-background-color: #1565c0;" />
-      <TextArea layoutX="538.0" layoutY="13.0" prefHeight="500.0" prefWidth="200.0" style="-fx-background-color: #f0f8ff;" />
+      <AnchorPane layoutX="538.0" layoutY="588.0" prefHeight="82.0" prefWidth="206.0">
+         <children>
+            <TextField fx:id="infield"  onAction="#getCMD" prefHeight="34.0" prefWidth="206.0" promptText="Input Command/Word" style="-fx-background-color: #1565c0;" />
+            <Button layoutX="41.0" layoutY="41.0" mnemonicParsing="false" onAction="#getCMD" prefHeight="25.0" prefWidth="125.0" text="Run cmd" />
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="517.0" layoutY="13.0">
+         <children>
+            <TextArea fx:id="outfield" prefHeight="500.0" prefWidth="248.0" style="-fx-background-color: #f0f8ff;" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
