--- a/src/Board2.fxml
+++ b/src/Board2.fxml
@@ -334,13 +334,13 @@
       </GridPane>
       <AnchorPane layoutX="538.0" layoutY="588.0" prefHeight="82.0" prefWidth="206.0">
          <children>
-            <TextField id="inField" onAction="#getCMD" prefHeight="34.0" prefWidth="206.0" promptText="Input Command/Word" style="-fx-background-color: #1565c0;" />
+            <TextField fx:id="infield" onAction="#getCMD" prefHeight="34.0" prefWidth="206.0" promptText="Input Command/Word" style="-fx-background-color: #1565c0;" />
             <Button layoutX="41.0" layoutY="41.0" mnemonicParsing="false" onAction="#getCMD" prefHeight="25.0" prefWidth="125.0" text="Run cmd" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="517.0" layoutY="13.0">
          <children>
-            <TextArea id="outField" prefHeight="500.0" prefWidth="248.0" style="-fx-background-color: #f0f8ff;" />
+            <TextArea fx:id="outfield" prefHeight="500.0" prefWidth="248.0" style="-fx-background-color: #f0f8ff;" />
          </children>
       </AnchorPane>
    </children>
